# cpp-type-name-parser

./: CMakeLists.txt
.github/workflows/: build.yml  coverage.yml
cmake/: CTNP-EnableAdditionalFlags.cmake  CTNP-EnableWarnings.cmake  CTNP-ReadProjectVersion.cmake
include/ctnp/: Algorithm.hpp  C++Backports.hpp  Lexer.hpp  LexerTokens.hpp  Prettify.hpp  PrintVisitor.hpp  TypeList.hpp
include/ctnp/config/: Config.hpp  Macro.hpp  Version.hpp
include/ctnp/lexing/: Lexer.hpp  Tokens.hpp
include/ctnp/parsing/: Parser.hpp  Reductions.hpp  Tokens.hpp
src/: CMakeLists.txt  Lexer.cpp
src/lexing/: Lexer.cpp
src/parsing/: CMakeLists.txt  Parser.cpp
tests/: Algorithm.cpp  CMakeLists.txt  Catch2FallbackStringifier.hpp  Lexer.cpp  Prettify.cpp  TypeList.cpp  Version.cpp
tests/cmake/: FindCatch2.cmake  Findmimicpp.cmake
tests/lexing/: CMakeLists.txt  Lexer.cpp
tests/parsing/: CMakeLists.txt  Parser.cpp  Reductions.cpp  Tokens.cpp
